layout bugfix

--- a/twitch/twitch_personal_layout.user.css
+++ b/twitch/twitch_personal_layout.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           twitch.tv Personal Layout
 @namespace      nerblo
-@version        1.8.5
+@version        1.8.6
 @author         nerblo
 @license        CC-BY-SA-4.0
 @description    twitch.tv Personal Layout
@@ -157,10 +157,10 @@ url-prefix("https://dashboard.twitch.tv/")
     .channel-info-content .metadata-layout__support {
         margin-top: -14px !important;
     }
-    .channel-info-content .metadata-layout__support .fLxSbt {
+    .channel-info-content .metadata-layout__support .gA-deNz {
         height: 0.1em !important;
     }
-    .channel-info-content .jkAbQw {
+    .channel-info-content .hrtpEK {
         margin-top: 8px !important;
     }
     .metadata-layout__secondary-button-spacing {
